# NameGen

./: CMakeLists.txt  readme.txt
include/config/: NameGenConfig.h
include/generators/: ChineseNameGenerator.h  EnglishNameGenerator.h  JapaneseNameGenerator.h  NameGenerator.h
include/utils/: ConsoleUtils.h  Random.h
src/: main.cpp
src/generators/: ChineseNameGenerator.cpp  EnglishNameGenerator.cpp  JapaneseNameGenerator.cpp  NameGenerator.cpp
src/utils/: ConsoleUtils.cpp  Random.cpp
